# mle_aws

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.tf  pyproject.toml  requirements.txt  upload_data.yml  upload_model_af.yml
.github/workflows/: ci.yml
src/: cleanup.py  predict.py  train.py
tests/: test_lambda.py
